--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -24,3 +26,21 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.plants {
+  display: flex;
+  justify-content: center;
+}
+.plant-item {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  margin-left: 50px;
+  margin-right: 50px;
+  align-items: center;
+}
+ 
+.text {
+  text-align: center;
+}
+  
